Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 starting from two files:</p>
 
 <ul>
-<li>a YAML file containing the metadata</li>
+<li>a <a href="https://en.wikipedia.org/wiki/YAML">YAML</a> file containing the metadata</li>
 <li>a (temporary) HDF5 file containing only the photon_data arrays</li>
 </ul>
 
@@ -101,6 +101,27 @@ can be directly called from any shell.</p>
 </ul>
 
 <p>These packages depends on yaml (C library), pytables 3.2, hdf5 (C library).</p>
+
+<h1>
+<a id="feedback" class="anchor" href="#feedback" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feedback</h1>
+
+<p>For questions or comments please:</p>
+
+<ul>
+<li>
+<a href="https://github.com/Photon-HDF5/phforge/issues">Open an GitHub issue</a> or</li>
+<li>Ask a question on the <a href="https://groups.google.com/forum/#!forum/photon-hdf5">Photon-HDF5 Google Group</a>.</li>
+</ul>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p><em>phforge</em> is released under the open source MIT license.</p>
+
+<h2>
+<a id="acknowledgements" class="anchor" href="#acknowledgements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgements</h2>
+
+<p>This work was supported by NIH Grant R01-GM95904.</p>
       </section>
     </div>
 
